# sqlite_unaccent

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: free_wrap.hpp  stdafx.hpp  unaccent_sqlite.hpp
src/: lib.cpp  main.cpp  unaccent_sqlite.cpp  unnacent_sqlite.cpp
tests/: CMakeLists.txt  test.cpp  test_sqlite_integration.cpp
